# ktexttemplate

./: .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  CHANGELOG  CMakeLists.txt  Mainpage.dox  README.md  metainfo.yaml
autotests/: CMakeLists.txt  coverageobject.cpp  coverageobject.h  operatorcasttests.cpp  qtunorderedmap.h  test_input.cpp  test_macros.h  testbuiltins.cpp  testcachingloader.cpp  testdefaulttags.cpp  testfilters.cpp  testgenericcontainers.cpp  testgenerictypes.cpp  testinternationalization.cpp  testloadertags.cpp  testresource.qrc.cmake  testsafestring.cpp  testscriptabletags.cpp
cmake/modules/: Doxyfile.in  Grantlee5Config.cmake.in  KF6TextTemplateConfig.cmake.in  KF6TextTemplateMacros.cmake
docs/: builtins.qdoc  differences_django.qdoc  examples.qdoc  extension.qdoc  for_app_dev.dox  for_app_dev.qdoc  for_themers.qdoc  generictypes.qdoc  internals.qdoc  l10n.qdoc  using_and_deploying.qdoc
dox/: builtins.dox  custom_qtextobject.dox  differences_django.dox  examples.dox  extension.dox  for_app_dev.dox  for_themers.dox  generictypes.dox  internals.dox  l10n.dox  moduledeps.dot  moduledeps_no_qml.dot  porting.dox  using_and_deploying.dox
examples/: CMakeLists.txt
examples/books/: CMakeLists.txt  bookdelegate.cpp  bookwindow.cpp  bookwindow.h  bookwrapper.cpp  bookwrapper.h  grantlee_paths.h.cmake
examples/codegen/: CMakeLists.txt  codegentableview.cpp  codegentableview.h  comboboxdelegate.cpp  comboboxdelegate.h  comboboxdelegate_p.h  designwidget.cpp  designwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  methodmodel.cpp  methodmodel.h  propertytablewidget.cpp  propertytablewidget.h
examples/contacts/: CMakeLists.txt  contact.cpp  contact.h  kdelocalizer.cpp  kdelocalizer.h  main_kde.cpp  main_linguist.cpp  mainwindow.cpp  mainwindow.h
examples/contacts/cmake/modules/: FindGettext.cmake
examples/htmlapps/: CMakeLists.txt  customplugin.cpp  customplugin.h  grantlee_paths.h.cmake  localrequestmanager.cpp  localrequestmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  rssfeed.cpp  rssfeed.h  templatereply.cpp  templatereply.h
scripts/: extract_strings_gettext.py  extract_strings_linguist.py  makerelease.sh  strings_extractor.py  strings_extractor_gettext.py  strings_extractor_linguist.py
src/defaultfilters/: CMakeLists.txt  datetime.cpp  datetime.h  defaultfilters.cpp  defaultfilters.h  integers.cpp  integers.h  lists.cpp  lists.h  logic.cpp  logic.h  misc.cpp  misc.h  stringfilters.cpp  stringfilters.h
src/defaulttags/: CMakeLists.txt  autoescape.cpp  autoescape.h  comment.cpp  comment.h  cycle.cpp  cycle.h  debug.cpp  debug.h  defaulttags.cpp  defaulttags.h  filtertag.cpp  filtertag.h  firstof.cpp  firstof.h  for.cpp  for.h  if.cpp  if.h  if_p.h  ifchanged.cpp  ifchanged.h  ifequal.cpp  ifequal.h  load.cpp  load.h  mediafinder.cpp  mediafinder.h  now.cpp  now.h  range.cpp  range.h  regroup.cpp  regroup.h  spaceless.cpp  spaceless.h  templatetag.cpp  templatetag.h  widthratio.cpp  widthratio.h  (+2 more)
src/i18n/: CMakeLists.txt  i18n.cpp  i18n.h  i18nc.cpp  i18nc.h  i18ncp.cpp  i18ncp.h  i18np.cpp  i18np.h  i18ntags.cpp  i18ntags.h  l10n_filesize.cpp  l10n_filesize.h  l10n_money.cpp  l10n_money.h  with_locale.cpp  with_locale.h
src/lib/: CMakeLists.txt  abstractlocalizer.cpp  abstractlocalizer.h  cachingloaderdecorator.cpp  cachingloaderdecorator.h  context.cpp  context.h  customtyperegistry.cpp  customtyperegistry_p.h  engine.cpp  engine.h  engine_p.h  exception.h  filter.cpp  filter.h  filterexpression.cpp  filterexpression.h  grantlee_config_p.h.cmake  grantlee_tags_p.h  grantlee_templates.h  grantlee_test_export.h.in  grantlee_version.h.cmake  ktexttemplate-index.qdoc  ktexttemplate.h  ktexttemplate.qdoc  ktexttemplate.qdocconf  ktexttemplate_config_p.h.cmake  ktexttemplate_version.h.cmake  lexer.cpp  lexer_p.h  metaenumvariable_p.h  metatype.cpp  metatype.h  node.cpp  node.h  nodebuiltins.cpp  nodebuiltins_p.h  nulllocalizer.cpp  nulllocalizer_p.h  outputstream.cpp  (+26 more)
src/loadertags/: CMakeLists.txt  block.cpp  block.h  blockcontext.cpp  blockcontext.h  extends.cpp  extends.h  include.cpp  include.h  loadertags.cpp  loadertags.h
src/scriptabletags/: scriptablecontext.cpp  scriptablecontext.h  scriptablefilter.cpp  scriptablefilter.h  scriptablefilterexpression.cpp  scriptablefilterexpression.h  scriptablenode.cpp  scriptablenode.h  scriptableparser.cpp  scriptableparser.h  scriptablesafestring.cpp  scriptablesafestring.h  scriptabletags.cpp  scriptabletags.h  scriptabletemplate.cpp  scriptabletemplate.h  scriptablevariable.cpp  scriptablevariable.h
templates/: CMakeLists.txt
templates/lib/: CMakeLists.txt
textdocument/: CMakeLists.txt
